[fix]-alignment issues

--- a/src/index.css
+++ b/src/index.css
@@ -99,6 +99,7 @@ body{
   font-weight: 400;
   font-size: 10.24px;
   text-decoration-line: underline;
+  margin-left: 12px;
   color: #918E9B;
 }
 
